@@ -12,6 +12,7 @@ WinMerge 2.11.1.1
   BugFix: Use system codepage for paths (#1979429, #2008581)
   BugFix: ANSI build crash in folder compare (#2010053)
   BugFix: Add insert/overtype mode indicator to statusbar (#2015174)
+  BugFix: Detected UTF-8 encoding shown as 65001 (#2012377)
 
 WinMerge 2.10.x (R2_10) branch created (r5561)
 
